// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Provider options schemas Anthropic exposes an options schema 1`] = `
{
  "groups": [
    {
      "fields": [
        {
          "default": false,
          "key": "enableCacheBreakpoints",
          "label": "Enable Prompt Caching",
          "type": "boolean",
        },
        {
          "default": "system_and_long_context",
          "enumValues": [
            {
              "label": "System message only",
              "value": "system_only",
            },
            {
              "label": "System + tools + conversation (recommended)",
              "value": "system_and_long_context",
            },
          ],
          "key": "cacheStrategy",
          "label": "Cache Strategy",
          "showIf": {
            "equals": true,
            "field": "enableCacheBreakpoints",
          },
          "type": "enum",
        },
        {
          "default": "5m",
          "enumValues": [
            {
              "label": "5 minutes (1.25x write cost)",
              "value": "5m",
            },
            {
              "label": "1 hour (2x write cost)",
              "value": "1h",
            },
          ],
          "key": "cacheTTL",
          "label": "Cache Duration",
          "showIf": {
            "equals": true,
            "field": "enableCacheBreakpoints",
          },
          "type": "enum",
        },
      ],
      "helpText": "Prompt caching can reduce costs by up to 90% for repeated context.",
      "title": "Anthropic Options",
    },
    {
      "fields": [
        {
          "default": false,
          "key": "extendedThinking",
          "label": "Enable Extended Thinking",
          "type": "boolean",
        },
        {
          "default": 4096,
          "helpText": "Maximum tokens the model may spend thinking. Minimum 1024; defaults to 4096 when left blank.",
          "key": "thinkingBudget",
          "label": "Thinking Budget (tokens)",
          "showIf": {
            "equals": true,
            "field": "extendedThinking",
          },
          "type": "number",
        },
      ],
      "helpText": "Let the model reason before answering. The reasoning is shown in chat (display only) and never re-fed to the model. While thinking is on, temperature and top_p are left at their defaults (extended thinking requires this), and max_tokens is raised above the budget if needed (the API requires budget ≥ 1024 and < max_tokens).",
      "title": "Extended Thinking",
    },
  ],
}
`;

exports[`Provider options schemas DeepSeek exposes an options schema 1`] = `
{
  "groups": [
    {
      "fields": [
        {
          "default": "",
          "enumValues": [
            {
              "label": "(model default)",
              "value": "",
            },
            {
              "label": "Enabled",
              "value": "enabled",
            },
            {
              "label": "Disabled",
              "value": "disabled",
            },
          ],
          "key": "thinking",
          "label": "Thinking Mode",
          "type": "enum",
        },
        {
          "default": "",
          "enumValues": [
            {
              "label": "(model default)",
              "value": "",
            },
            {
              "label": "High",
              "value": "high",
            },
            {
              "label": "Max",
              "value": "max",
            },
          ],
          "helpText": "DeepSeek's reasoning scale. low/medium fold to high; xhigh folds to max.",
          "key": "reasoning_effort",
          "label": "Reasoning Effort",
          "type": "enum",
        },
      ],
      "helpText": "The V4 models reason before answering by default, so "(model default)" means thinking is ON — set Disabled to turn it off. While thinking, temperature, top_p, and frequency / presence penalties are ignored, and Quilltap anchors multi-character turns in prose rather than with a [Name] prefill, which DeepSeek rejects mid-thinking.",
      "title": "DeepSeek Options",
    },
  ],
}
`;

exports[`Provider options schemas NanoGPT exposes an options schema 1`] = `
{
  "groups": [
    {
      "fields": [
        {
          "default": "",
          "enumValues": [
            {
              "label": "(model default)",
              "value": "",
            },
            {
              "label": "None",
              "value": "none",
            },
            {
              "label": "Minimal",
              "value": "minimal",
            },
            {
              "label": "Low",
              "value": "low",
            },
            {
              "label": "Medium",
              "value": "medium",
            },
            {
              "label": "High",
              "value": "high",
            },
            {
              "label": "XHigh",
              "value": "xhigh",
            },
          ],
          "helpText": "Any value other than None switches reasoning on; None switches it off; (model default) leaves the decision to the model — a \`:thinking\` id thinks, the rest generally do not. Not every model exposes its reasoning text even when it reasons.",
          "key": "reasoning_effort",
          "label": "Reasoning Effort",
          "type": "enum",
        },
      ],
      "helpText": "NanoGPT routes each request to the named model's own establishment, so reasoning behaviour is ultimately the model's: \`:thinking\`-suffixed ids reason by default, and Reasoning Effort below asks any reasoning-capable model to think harder or not at all. Deliberations stream into the Salon's thinking fold (display only; never re-fed to the model). Reasoning tokens bill as output tokens — a generous effort on a verbose model is a generous invoice.",
      "title": "NanoGPT Options",
    },
  ],
}
`;

exports[`Provider options schemas Ollama exposes an options schema 1`] = `
{
  "groups": [
    {
      "fields": [
        {
          "default": false,
          "helpText": "Let thinking-capable models (Qwen3, DeepSeek-R1, and kin) reason before answering. Reasoning streams into the thinking display rather than the reply. When off (the default), the model is asked to answer directly — best when you need clean output such as JSON. Either way, any <think> blocks that leak into the reply are routed to the thinking display.",
          "key": "enable_thinking",
          "label": "Enable Thinking",
          "type": "boolean",
        },
        {
          "default": "",
          "enumValues": [
            {
              "description": "Let the model decide how long to think",
              "label": "Model default",
              "value": "",
            },
            {
              "description": "Shortest reasoning, quickest replies",
              "label": "Low",
              "value": "low",
            },
            {
              "label": "Medium",
              "value": "medium",
            },
            {
              "label": "High",
              "value": "high",
            },
            {
              "description": "Longest reasoning, slowest replies",
              "label": "Maximum",
              "value": "max",
            },
          ],
          "helpText": "How long the model may reason before answering. On a local machine every reasoning token is wall-clock time, so this is the largest speed control you have. Needs a recent Ollama and a model whose template understands effort levels; older servers fall back to plain thinking.",
          "key": "thinking_effort",
          "label": "Thinking Effort",
          "showIf": {
            "equals": true,
            "field": "enable_thinking",
          },
          "type": "enum",
        },
        {
          "default": "",
          "enumValues": [
            {
              "description": "Whatever your Ollama is configured to do",
              "label": "Server default",
              "value": "",
            },
            {
              "description": "Free the memory as soon as the reply is done",
              "label": "Unload immediately",
              "value": "0",
            },
            {
              "label": "5 minutes",
              "value": "5m",
            },
            {
              "label": "30 minutes",
              "value": "30m",
            },
            {
              "label": "1 hour",
              "value": "1h",
            },
            {
              "description": "Never unload while the server runs",
              "label": "Keep loaded",
              "value": "-1",
            },
          ],
          "helpText": "How long Ollama keeps this model in memory after a reply. The server unloads after five minutes by default, and reloading a large model costs half a minute on the next message. Set per profile, so a big chat model can stay resident while a small utility one unloads at once. Leave on "Server default" and your OLLAMA_KEEP_ALIVE setting is left entirely alone.",
          "key": "keep_alive",
          "label": "Keep Model Loaded",
          "type": "enum",
        },
        {
          "default": 300,
          "helpText": "How long to wait for the server before giving up (default 300). While streaming this covers only the wait for the first token, so a long answer is never cut off mid-sentence — but loading a large model and reading a long prompt both happen before that first token. Raise it if big models on a busy machine abort with "operation was aborted"; lower it if you would rather a stalled server fail quickly. Leave blank for the default.",
          "key": "request_timeout_seconds",
          "label": "Request Timeout (seconds)",
          "type": "number",
        },
      ],
      "title": "Ollama Options",
    },
    {
      "fields": [
        {
          "helpText": "Keep only the K most likely next tokens.",
          "key": "top_k",
          "label": "Top K",
          "type": "number",
        },
        {
          "helpText": "Drop tokens less likely than this fraction of the best one.",
          "key": "min_p",
          "label": "Min P",
          "type": "number",
        },
        {
          "helpText": "Penalty applied to tokens already used. Above 1 discourages repetition; 1 disables it.",
          "key": "repeat_penalty",
          "label": "Repeat Penalty",
          "type": "number",
        },
        {
          "helpText": "Discourages tokens that have appeared at all. Some publishers recommend a value for non-thinking mode (Qwen3.8 asks for 1.5).",
          "key": "presence_penalty",
          "label": "Presence Penalty",
          "type": "number",
        },
        {
          "helpText": "Discourages tokens in proportion to how often they have already appeared.",
          "key": "frequency_penalty",
          "label": "Frequency Penalty",
          "type": "number",
        },
        {
          "helpText": "Fixes the sampler so the same prompt gives the same answer.",
          "key": "seed",
          "label": "Seed",
          "type": "number",
        },
      ],
      "helpText": "Sent only when filled in; blank leaves the model’s own default in charge. Model publishers usually name the values they want — Qwen3 asks for Top K 20 and Min P 0.",
      "title": "Sampling",
    },
  ],
}
`;

exports[`Provider options schemas OpenAI exposes an options schema 1`] = `
{
  "groups": [
    {
      "fields": [
        {
          "default": "",
          "enumValues": [
            {
              "label": "(model default)",
              "value": "",
            },
            {
              "label": "Low",
              "value": "low",
            },
            {
              "label": "Medium",
              "value": "medium",
            },
            {
              "label": "High",
              "value": "high",
            },
          ],
          "helpText": "Scales how long and detailed the answer is. Supported on GPT-5 and newer models; older models will ignore it.",
          "key": "verbosity",
          "label": "Verbosity",
          "type": "enum",
        },
        {
          "default": "",
          "enumValues": [
            {
              "label": "(model default)",
              "value": "",
            },
            {
              "label": "Minimal",
              "value": "minimal",
            },
            {
              "label": "Low",
              "value": "low",
            },
            {
              "label": "Medium",
              "value": "medium",
            },
            {
              "label": "High",
              "value": "high",
            },
          ],
          "helpText": "How hard the model thinks before responding. Applies to reasoning models (o-series, GPT-5); ignored on non-reasoning models. Background tasks always use Low regardless of this setting.",
          "key": "reasoningEffort",
          "label": "Reasoning Effort",
          "type": "enum",
        },
      ],
      "title": "OpenAI Options",
    },
    {
      "fields": [
        {
          "default": false,
          "key": "reasoningSummary",
          "label": "Show Reasoning Summary",
          "type": "boolean",
        },
      ],
      "helpText": "Request a reasoning summary so the model's thinking can be shown in chat (display only; never re-fed to the model). Only the reasoning OpenAI models (GPT-5, o-series) produce one. OpenAI does not always expose a summary — if nothing appears, the model simply did not return one.",
      "title": "Reasoning",
    },
  ],
}
`;

exports[`Provider options schemas OpenAI-compatible exposes an options schema 1`] = `
{
  "groups": [
    {
      "fields": [
        {
          "default": "",
          "enumValues": [
            {
              "description": "Send nothing; the model decides",
              "label": "Model default",
              "value": "",
            },
            {
              "description": "Answer without reasoning",
              "label": "None",
              "value": "none",
            },
            {
              "label": "Low",
              "value": "low",
            },
            {
              "label": "Medium",
              "value": "medium",
            },
            {
              "label": "High",
              "value": "high",
            },
            {
              "description": "Longest reasoning, slowest replies",
              "label": "Extra high",
              "value": "xhigh",
            },
          ],
          "helpText": "How long a reasoning model may think before answering. On a machine where every token costs wall-clock time this is the largest speed control you have. Only models whose chat template understands reasoning levels will act on it.",
          "key": "reasoning_effort",
          "label": "Reasoning Effort",
          "type": "enum",
        },
        {
          "helpText": "Keep only the K most likely next tokens. Qwen3 and kin ask for 20. Leave blank for the model default.",
          "key": "top_k",
          "label": "Top K",
          "type": "number",
        },
        {
          "helpText": "Drop tokens less likely than this fraction of the best one. Qwen3 and kin ask for 0. Leave blank for the model default.",
          "key": "min_p",
          "label": "Min P",
          "type": "number",
        },
        {
          "helpText": "Penalty applied to tokens already used. Above 1 discourages repetition; 1 disables it.",
          "key": "repeat_penalty",
          "label": "Repeat Penalty",
          "type": "number",
        },
        {
          "helpText": "Discourages tokens that have appeared at all. Some publishers recommend a value here for non-thinking mode (Qwen3.8 asks for 1.5).",
          "key": "presence_penalty",
          "label": "Presence Penalty",
          "type": "number",
        },
        {
          "helpText": "Discourages tokens in proportion to how often they have already appeared.",
          "key": "frequency_penalty",
          "label": "Frequency Penalty",
          "type": "number",
        },
        {
          "helpText": "Fixes the sampler so the same prompt gives the same answer. Leave blank for a fresh roll each turn.",
          "key": "seed",
          "label": "Seed",
          "type": "number",
        },
        {
          "helpText": "Let the server reuse the part of the prompt it has already processed. llama-server does this by default — this is an escape hatch for servers that do not, and you can leave it alone.",
          "key": "cache_prompt",
          "label": "Reuse Cached Prompt",
          "type": "boolean",
        },
      ],
      "helpText": "These are sent only when you fill them in. An endpoint that does not recognise a setting generally ignores it, so leave anything your server does not support blank.",
      "title": "Endpoint Options",
    },
  ],
}
`;

exports[`Provider options schemas OpenRouter exposes an options schema 1`] = `
{
  "groups": [
    {
      "fields": [
        {
          "default": false,
          "helpText": "Providers will not store or log your prompts and responses.",
          "key": "enableZDR",
          "label": "Enable Zero Data Retention (ZDR)",
          "type": "boolean",
        },
        {
          "affects": "modelInput",
          "default": false,
          "helpText": "Enter an arbitrary model ID not in the fetched list.",
          "key": "useCustomModel",
          "label": "Use Custom Model ID",
          "type": "boolean",
        },
        {
          "default": [],
          "key": "fallbackModels",
          "label": "Fallback Models (max 2)",
          "max": 2,
          "multiEnumSource": "fetchedModels",
          "type": "multi-enum",
        },
      ],
      "title": "OpenRouter Options",
    },
  ],
}
`;

exports[`Provider options schemas Z.AI exposes an options schema 1`] = `
{
  "groups": [
    {
      "fields": [
        {
          "default": "",
          "enumValues": [
            {
              "label": "(model default)",
              "value": "",
            },
            {
              "label": "Enabled",
              "value": "enabled",
            },
            {
              "label": "Disabled",
              "value": "disabled",
            },
          ],
          "key": "thinking",
          "label": "Thinking Mode",
          "type": "enum",
        },
        {
          "default": "",
          "enumValues": [
            {
              "label": "(model default)",
              "value": "",
            },
            {
              "label": "Minimal",
              "value": "minimal",
            },
            {
              "label": "High",
              "value": "high",
            },
            {
              "label": "Max",
              "value": "max",
            },
          ],
          "helpText": "A dial for how hard glm-5.2 cogitates before it speaks (thinking must be lit; lesser models pay it no heed). Minimal all but silences the rumination; High and Max open the throttle — and mind that low and medium quietly fold up to High, xhigh up to Max. Leave it at (model default) and glm-5.2 still sets to High of its own accord, sparing you the API's spendthrift Max.",
          "key": "reasoning_effort",
          "label": "Reasoning Effort",
          "type": "enum",
        },
      ],
      "helpText": "Thinking mode enables the GLM reasoning models' extended chain-of-thought, shown in the Salon (display only; never re-fed to the model). Only the hybrid-reasoning GLM models (glm-4.5/4.6 family, glm-5.x) produce it; with thinking off, nothing appears.",
      "title": "Z.AI Options",
    },
  ],
}
`;
